# SoundVisualizer

./: .dockerignore  .gitignore  1.md  2.md  CLAUDE.md  Dockerfile  PLAN.md  README.md  config.example.toml  docker-compose.yml  index.html  package-lock.json  package.json  plan.md  pyproject.toml  tsconfig.app.json
deploy/: README.md  research-tree.service  soundvis-backup.service  soundvis-backup.timer  soundvis.service
docs/: mic_arc.md  overview.html  psychoacoustics_report.tex  psychoacoustics_report_pl.tex
scripts/: backup_data.sh  deploy_to_pi.sh  generate_udev.py  load_mic_arc.py  setup.ps1  setup.sh  setup_rpi.sh
server/: README.md  __main__.py  main.py
server/api/: calibration.py  capture.py  capture_run.py  compat_tolerances.py  dev.py  devices.py  keys.py  measurements.py  research_tree.py  results.py  schemas.py  setup_presets.py  thrust_stand.py
server/core/: audio_devices.py  calibration.py  calibration_override.py  capture.py  capture_orchestrator.py  config.py  cutoff_watchdog.py  fft.py  psychoacoustics.py  thrust_stand_service.py  trigger_sync.py  wav.py
server/store/: calibration.py  compat_tolerances.py  keys.py  measurements.py  paths.py  psychoacoustics.py  setup_presets.py
server/tests/: test_calibration.py  test_calibration_api.py  test_calibration_override.py  test_capture_orchestrator.py  test_compat_tolerances.py  test_config.py  test_cutoff_watchdog.py  test_fft.py  test_psychoacoustics.py  test_results_api.py  test_setup_presets.py  test_smoke.py  test_tare.py  test_trigger_sync.py  (+1 more)
src/: App.tsx  index.css  plotly.d.ts
(+80 files in other folders)
