[project]
name = "soundvisualizer-server"
version = "0.1.0"
description = "Drone-noise directivity measurement server: 6× UMIK-2 + Tyto Robotics 1585 + Norsonic NOR-145"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.20",
    "pydantic>=2.9",
    "sounddevice>=0.5",
    "numpy>=2.0",
    "scipy>=1.14",
    "pyserial-asyncio>=0.6",
    "aioftp>=0.23",
    "websockets>=14",
    "aiofiles>=24",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"server/vendor/pawel/*" = ["ALL"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["server/tests"]
